# swc-plugin-starter

./: Cargo.toml  Makefile  README.md  package.json  rust-toolchain.toml
.github/workflows/: publish-npm.yml
src/: lib.rs
