[package]
name = "swc-plugin-starter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

# This removes more dead code
codegen-units = 1

# Optimize for size
opt-level = "s"
 
# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "0.53.*", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
